= 
:allow-uri-read: 


|===


| *Date* | *Zone de solution* | *Description du changement* 


| 04/27/2023 | Cloud hybride | Ajout de Veeam Backup & Restore dans VMware Cloud avec AWS FSX for ONTAP 


| 03/31/2023 | Base de données | Ajout du déploiement et de la protection des bases de données Oracle dans AWS FSX/EC2 avec iSCSI/ASM 


| 03/31/2023 | Base de données | Ajout de la sauvegarde, de la restauration et du clonage des bases de données Oracle avec les services SnapCenter 


| 03/29/2023 | Automatisation | Blog « FSX pour ONTAP le contrôle et la redimensionnement automatique avec la fonction Lambda d'AWS » avec options de déploiement privé/public et options de déploiement manuel/automatisé. 


| 03/22/2023 | Automatisation | Blog : FSX pour le contrôle et la redimensionnement automatique du ONTAP à l'aide de la fonction Lambda d'AWS 


| 02/15/2023 | Base de données | Ajout du déploiement haute disponibilité et de la reprise après incident PostgreSQL dans AWS FSX/EC2 


| 02/07/2023 | Cloud hybride | Ajout d'un blog : annonce de la disponibilité générale de la prise en charge des datastores NetApp Cloud Volumes Service pour Google Cloud VMware Engine 


| 02/07/2023 | Cloud hybride | Ajout du rapport TR-4955 : reprise après incident avec FSX pour ONTAP et VMC (AWS VMware Cloud) 


| 01/24/2023 | Base de données | Ajout du rapport TR-4954 : déploiement et protection de la base de données Oracle sur Azure NetApp Files 


| 01/12/2023 | Base de données | Ajout de blog : protégez vos charges de travail SQL Server avec NetApp SnapCenter avec Amazon FSX pour NetApp ONTAP 


| 12/15/2022 | Base de données | Ajout du document TR-4923 : SQL Server sur AWS EC2 avec Amazon FSX pour NetApp ONTAP 


| 12/06/2022 | Base de données | 7 vidéos supplémentaires pour la modernisation des bases de données Oracle dans le cloud hybride avec stockage Amazon FSX ont été ajoutées 

