@@ -18087,4 +18087,40 @@
   <block id="1260fc391141c4810f2e3a97eaef162e" category="cell">03/22/2023</block>
   <block id="ba7124a5ffeb6501794efa91cdcb129b" category="cell">Ajout d'un lien vers la documentation VMware pour FSX ONTAP en tant que datastore NFS</block>
   <block id="d7c05d05b1d6ce69dff2a4eaa1692f17" category="sidebar">Sauvegarde et restauration Veeam dans VMware Cloud avec AWS FSX pour NetApp ONTAP</block>
+  <block id="1f791cf07735c71bdb472a0ccd42abc7" category="cell">05/04/2023</block>
+  <block id="35cec0f40dca2af7a6d3c73676c4629d" category="cell">Ajout du contenu « Nouveautés de VMware vSphere 8 »</block>
+  <block id="8b5fd5c25439f60370c36458db046f5e" category="doc">Nouveautés de VMware vSphere 8</block>
+  <block id="d64ac18d7cdc111af11284a04f9e8b1e" category="paragraph">Auteur : Chris Reno, Ingénierie de solutions NetApp</block>
+  <block id="5a16d86949ce13083d30d1c331be09cb" category="paragraph">L'intégration des technologies NetApp et VMware a une expérience acquise au cours des 20 dernières années et pendant des milliers d'heures d'ingénierie. Avec l'avènement de vSphere 8 et de ONTAP 9.12, les deux entreprises fournissent des produits qui répondent aux charges de travail les plus exigeantes. Lorsque ces produits sont combinés dans des solutions, sont de véritables problématiques client résolues, que ce soit sur site ou dans les clouds publics. Lorsque ces produits sont combinés dans des solutions, les challenges des clients sont résolus, que ce soit sur site ou dans les clouds publics.</block>
+  <block id="4eba71964e65640552100b4af7c50e86" category="paragraph">Pour vous aider à déterminer les capacités de support des produits, des protocoles, des systèmes d'exploitation, etc., veuillez consulter les ressources ci-dessous :</block>
+  <block id="bab924f6f70545a4aab5c02282b4321d" category="list-text">Le<block ref="cdfba3111aed90ef850f414330a864eb" category="inline-link-rx"></block> (IMT). La IMT définit les composants et versions qualifiés que vous pouvez utiliser pour créer des configurations FC/FCoE, iSCSI, NFS et CIFS, ainsi que des intégrations avec des plug-ins et des offres logicielles supplémentaires.</block>
+  <block id="e08175c6fa64cba68719dea85ebd9d34" category="inline-link">Guide de compatibilité VMware</block>
+  <block id="e96d25b875cbad01256de32331620fce" category="list-text">Le<block ref="132c849774dbad448418b619a953cbd1" category="inline-link-rx"></block>. Le Guide de compatibilité VMware répertorie les systèmes, les E/S, le stockage/SAN, la compatibilité des sauvegardes et bien plus encore avec VMware Infrastructure et les logiciels.</block>
+  <block id="cca95a1e810067767564618ea73079be" category="list-text"><block ref="ec744c32e869920be1556ab8ebc057ef" category="inline-link-rx"></block>. Les outils ONTAP pour VMware vSphere sont un plug-in vCenter Server unique qui inclut des extensions Virtual Storage Console (VSC), VASA Provider et Storage Replication adapter (SRA). Entièrement pris en charge par VMware vSphere 8, OTV 9.12 apporte quotidiennement de la valeur ajoutée aux clients.</block>
+  <block id="ae33d50ae700fed2ee8028004d9fa2d8" category="section-title">Versions prises en charge par NetApp ONTAP et VMware</block>
+  <block id="ed126bbe4f371826a7c7c9d6fdd35e54" category="admonition">Veuillez laisser les pages se développer lorsque vous sélectionnez un lien dans les tableaux ci-dessous.</block>
+  <block id="e450cac7ca4b207e6cb6c51eeb3c76dd" category="cell">*VMware vSphere version*</block>
+  <block id="54d1b3917151f3d89ddbd7aef9f811dd" category="cell">*SAN*</block>
+  <block id="b4ccd4984cce17a35c772737cf9415b1" category="cell">*NFS*</block>
+  <block id="ea2b80d118e24f4d3328c20552636f22" category="cell">*OTV*</block>
+  <block id="dccf9c2e4a699b348abaf0369603c1a0" category="cell">*SnapCenter*</block>
+  <block id="b97d2c4e1a2a118c500af6e32504301f" category="cell">*VSphere 8*</block>
+  <block id="3c30688c35eac25f7729ec4ee134e7e3" category="cell"><block ref="f010a57a1b1362e74ef056cd949b4f6b" category="inline-link-rx"></block></block>
+  <block id="c538764856660dbf5ac35d08c5b7bcdf" category="cell"><block ref="5983a3bb611cf1b4562bfd78f97ed318" category="inline-link-rx"></block></block>
+  <block id="a140bde1e447ebe74a0b6b693d05d3c6" category="cell"><block ref="c14e144a71a125f874ca16b78c671347" category="inline-link-rx"></block></block>
+  <block id="8d153eb947f0747c73debd6aa0564387" category="cell"><block ref="9e4cfb7f25d7fb71f62ac8aad4b23fac" category="inline-link-rx"></block></block>
+  <block id="87efc48b7f668d33418b1f846e08a0bf" category="cell">*VSphere 8u1*</block>
+  <block id="adebed85a7d92b0f3fc4b5cfc97078b6" category="cell"><block ref="bdb3662ee535fb90a843ab7d85efbd16" category="inline-link-rx"></block></block>
+  <block id="055cce5491290ec858a19e499e0d9e71" category="cell"><block ref="bd210893ee82e4c865fcf08bbaf31838" category="inline-link-rx"></block></block>
+  <block id="336d5ebc5436534e61d16e63ddfca327" category="cell">-</block>
+  <block id="1f0f8c35492e97597c98b9dc82afa362" category="cell">*Système de stockage / protocoles*</block>
+  <block id="e90637603dd7a81f8a9115bb4ffd28f9" category="cell">*OTV - SRA*</block>
+  <block id="d7d7d2428ec9c1791dc7f644b043a8d4" category="cell">*OTV – VASA Provider*</block>
+  <block id="81e3cc47d6ed146bbe1096018a69f40c" category="cell">*Plug-in SnapCenter pour VMware vSphere*</block>
+  <block id="1a718e68b847d8b2043c7f76af9a4858" category="cell"><block ref="34ab3c79d36e5a654b9402fe2fcf7f3b" category="inline-link-rx"></block></block>
+  <block id="391de35bbb4cf1a51813527b129bb11e" category="cell"><block ref="e3a74d6b6b54621583ac737da6124d3a" category="inline-link-rx"></block></block>
+  <block id="47c5c0877638b8f808901039637b1474" category="cell"><block ref="8ef8fc61fd753b52cc179e3463e5820b" category="inline-link-rx"></block></block>
+  <block id="b8145535eda5b8ac300fd64bfa74cc26" category="cell"><block ref="64c621ea990d75acd1bb8fba7b272f2c" category="inline-link-rx"></block></block>
+  <block id="315a0755b344c41b2a45eb62f3868930" category="cell"><block ref="c0dded1a1fb8dd474b19235d36c5c4c7" category="inline-link-rx"></block></block>
+  <block id="1e6ad53e48d26e8f800d9e60c340e84d" category="sidebar">Nouveautés de VMware vSphere 8</block>
 </blocks>
