@@ -27,6 +27,9 @@ Modifications récentes de la documentation sur les solutions NetApp Les modific
 | *Date* | *Zone de solution* | *Description du changement* 
 
 
+| 05/04/2023 | Virtualisation | Ajout du contenu « Nouveautés de VMware vSphere 8 » 
+
+
 | 04/27/2023 | Cloud hybride | Ajout de Veeam Backup & Restore dans VMware Cloud avec AWS FSX for ONTAP 
 
 
@@ -400,6 +403,9 @@ Modifications récentes de la documentation sur les solutions NetApp Les modific
 
 
 | *Date* | *Zone de solution* | *Description du changement* 
+
+
+| 05/04/2023 | Virtualisation | Ajout du contenu « Nouveautés de VMware vSphere 8 » 
 
 
 | 08/05/2022 | Virtualisation | Ajout des informations « redémarrer requis » pour les paramètres VMware ESXi et ONTAP recommandés 
