@@ -3,6 +3,8 @@ indexpage:
   tiles:
   - title: Mise en route/meilleures pratiques
     links:
+    - title: Nouveautés de VMware vSphere 8
+      url: "/vmware-vsphere8-intro.html"
     - title: 'NetApp et VMware : mise en route'
       url: "/netapp-vmware.html"
     - title: Avantages de NetApp ONTAP pour les administrateurs VMware vSphere
