@@ -8,6 +8,9 @@
 | *Date* | *Zone de solution* | *Description du changement* 
 
 
+| 05/04/2023 | Virtualisation | Ajout du contenu « Nouveautés de VMware vSphere 8 » 
+
+
 | 04/27/2023 | Cloud hybride | Ajout de Veeam Backup & Restore dans VMware Cloud avec AWS FSX for ONTAP 
 
 
